--- a/PlottingScripts/MakeFigures.Rmd
+++ b/PlottingScripts/MakeFigures.Rmd
@@ -446,103 +446,62 @@ See ProcessPlotData.Rmd for info on the overLap file
 overLap <- readRDS(paste0(DataPath,
                            'overLap.rds'))
 
-ggplot(overLap, 
-          aes(x = Pos,
-              y = reorder(title, -Freq), 
-              color = Population, 
-              size = Pcat)) +
-          geom_point(shape = 108) +
-          scale_size(breaks = c(2, 3, 4), 
-                     range = c(1, 4),
-                     labels = c('6-8', '8-10', '10+'), 
-                     guide = guide_legend(direction = "vertical"),
-                                          name = '-log10(p)') +
-          scale_color_manual(breaks = overLap$Population,
-                             values = MyColour) +
-          guides(color = FALSE) +
-          ylab('Population') +
-          ggtitle('Overlap of Significant SNPs') +
-          theme_classic() +
-          theme(legend.box.background = element_rect(colour = "black"),
-                plot.title = element_text(hjust = 0.5), 
-                axis.title.x = element_blank(),
-                axis.text.x = element_blank(), 
-                axis.ticks.x = element_blank(), 
-                plot.margin = unit(c(1,1,0,1), "cm"))
+pop_order_single <- overLap %>% arrange(-single_count) %>% select(Population) %>% unique() %>% unlist()
 
+pop_order_double <- overLap %>% arrange(-double_count) %>% select(Population) %>% unique() %>% unlist()
 
-pop_count <- overLap %>%
-  select(Population, Chr, Pos) %>%
-  group_by(Population) %>%
-  summarise(count = n())
-
-p1 <- ggplot(pop_count, 
-       aes(x=reorder(Population, -count), 
-           y= count, 
-           fill = Population)) + 
+overLap$Population <- factor(overLap$Population, levels = pop_order_single)
+p1.1 <- ggplot(overLap, 
+       aes(x=Population, 
+           y= single_count,  
+           fill = strict)) + 
   geom_bar(stat="identity") +
-  scale_fill_manual(breaks = overLap$Population,
-                    values = MyColour) +
+  scale_fill_grey() +
   guides(fill = F) +
   theme(axis.text.x = element_text(angle = 60, hjust = 1, size = 20),
         axis.text.y = element_text(size = 20),
-        axis.title = element_text(size = 20)) +
-  labs(x = "Population",
-       y = "Number of variants Q-associated in at least two populations")
+        axis.title = element_text(size = 20),
+        plot.title = element_text(size = 20)) +
+  labs(x = "Population", y = "Count",
+       title = "Q-associated in only one population")
+
+overLap$Population <- factor(overLap$Population, levels = pop_order_double)
+p1.2 <- ggplot(overLap, 
+       aes(x=Population, 
+           y= double_count,  
+           fill = strict)) + 
+  geom_bar(stat="identity") +
+  scale_fill_grey() +
+  guides(fill = guide_legend(title = 'strict mask')) +
+  theme(axis.text.x = element_text(angle = 60, hjust = 1, size = 20),
+        axis.text.y = element_text(size = 20),
+        axis.title = element_text(size = 20),
+        plot.title = element_text(size = 20)) +
+  labs(x = "Population", y = "Count",
+       title = "Q-associated in at least two population")
+
+p1 <- plot_grid(p1.1,p1.2)
 
 p1
 ```
 
 ### Frequency of occurence
 ```{r,fig.height=2,fig.width=5}
-#this is for the labels of the xaxis
-xaxis <- overLap[!duplicated(overLap[,c('SigHits')]),]
-xaxis <- xaxis[which(xaxis$SigHits < 9),]
-xaxis <- rbind(xaxis,tail(overLap, 1))
-
-p2 <- ggplot(overLap,
-             aes(x = Pos,
-                 y = SigHits, 
-                 group=1))+
-             geom_hline(yintercept = 1, 
-                        color = 'grey', 
-                        linetype = 2) +
-             geom_hline(yintercept = 5,
-                        color = 'grey',
-                        linetype = 2) +
-             geom_hline(yintercept = 10,
-                        color = 'grey',
-                        linetype = 2) +
-             geom_line() +
-             scale_y_continuous(limits = c(0,16),
-                                breaks = c(1,5,10,15)) +
-             scale_x_discrete(expand = c(0.01,0),
-                              breaks  = xaxis$Pos, 
-                              labels = xaxis$nrow) + 
-             theme_classic() +
-             theme(plot.title = element_text(hjust = 0.5),
-                   plot.margin = unit(c(0,1,1,1), "cm"),
-                   axis.text.x = element_text(angle = 60, 
-                                              hjust = 1)) +
-             labs(x = 'SNPs ranked by frequency of occurence and genomic position', 
-                  y = 'Frequency\nof occurence')
-
-
-break_down <- overLap %>%
-  group_by(Chr,Pos) %>%
-  summarise(count = n()) %>%
-  group_by(count) %>%
-  summarise(freq = n()) %>%
-  filter(count > 1)
-
+#save to file
+pos_count <- readRDS(paste0(DataPath,
+                   'pos_count.rds'))
+pos_count$strict <- paste(pos_count$strict, "strict mask")
 p2 <- 
-  ggplot(break_down, aes(x = count, y = freq)) +
+  ggplot(pos_count, aes(x = count, y = freq)) +
   geom_bar(stat= "identity") +
-  scale_x_continuous(breaks = seq(1,13)) +
+  #scale_x_continuous(breaks = seq(1,13)) +
   labs(x = "Number of populations with Q-associations to the same variant",
        y = "Count") +
   theme(axis.text = element_text(size = 20),
-        axis.title = element_text(size = 20))
+        axis.title = element_text(size = 20),
+        strip.text = element_text(size = 20)) +
+  facet_wrap(.~strict, scales = 'free_y')
+
 
 p2
 ```
@@ -558,8 +517,8 @@ p3 <- plot_grid(p1, p2,
 ggsave(paste0(figurePath,
               'SNPOverlap6.jpg'),
               p3, 
-              height = 12, 
-              width = 12)
+              height = 15, 
+              width = 20)
 
 p3
 ```
