--- a/LatexManuscript/legacy.tex
+++ b/LatexManuscript/legacy.tex
@@ -1,5 +1,5 @@
 %%% PREAMBLE 
-\documentclass[9pt,lineno]{template}
+\documentclass[9pt,article]{template}
 
 \usepackage[export]{adjustbox}
 \usepackage{lscape}
@@ -219,12 +219,11 @@ The number of variants included in the analysis for SNPs, SNPs in repeat regions
 \subsection{Spurious variants, biased genotypes, or cell line artefacts?}
 To assess whether $Q$-associated variants are spurious variants resulting from sequencing artifacts or real variants exhibiting biased genotyping, we compare the original 1kGP sequence data to more recent sequencing efforts using the same cell lines.
 $Q$-associated variants that do not reproduce across sequencing experiments are likely the result of sequencing artifacts in the 1kGP. By contrast, 
-$Q$-associated variants that do reproduce across studies could result from (recurrent) cell line mutations or, more likely, from existing variants whose accurate genotyping depends on $Q$. Finally, given our nominal false discovery rate of $\alpha = 0.01$, we expect approximately $1\%$ of $Q$-associated variants to be false discoveries, i.e., variants that are not associated with $Q$ and that should therefore reproduce across experiments. 
+$Q$-associated variants that do reproduce across experiments could result from (recurrent) cell line mutations or, more likely, from existing variants whose genotyping depends on $Q$. Finally, given our nominal false discovery rate of $\alpha = 0.01$, we expect approximately $1\%$ of $Q$-associated variants to be false discoveries, i.e., variants that are not associated with $Q$ and that should therefore reproduce across experiments. 
 
 
 In 2017, Lan et al. resequenced 83 Han Chinese individuals from the 1kGP \citep{Lan2017}. 
-%To assess consistency between the two datasets, we consider consistency of genotype calls for $Q$-associated variants that are predicted to be polymorphic in these 83 individuals according to the 1kGP.
-Among the 296 such variants that were $Q$-associated in the CHB or CHS, only 6 are present in the resequenced data (Figure \ref{90HanSFS}).   
+Among the 296 such variants that were $Q$-associated in single-population tests for the CHB or CHS, only 6 are present in the resequenced data (Figure \ref{90HanSFS}).   
 This is slightly more but consistent with the 3 false positives predicted according to the $\alpha = 0.01$ nominal false discovery rate. 
 Thus the majority of $Q$-associated variants in the CHB or CHS  appear to be spurious variants. 
 
@@ -233,10 +232,7 @@ Of the 15,270 $Q$-associated variants identified globally, 6,307 are polymorphic
 The vast majority of polymorphisms associated with $Q$ are not present at all in the resequencing dataset, suggesting that they are spurious variants.
 Five variants show differing frequencies between both datasets and are likely explained by biased genotypes.
 Finally, 1,139 (or 18\%) are present in the resequenced data at comparable frequencies.
-Because this is higher than the false discovery rate, we conclude that the cohort-wide GCAT test identifies not only spurious variants, but also variants that have biased genotypes in populations other than the CHB/CHD. 
-
-%Some mutational signatures are heterogenous where not all suspicious variants are completely spurious in all individuals or populations. 
-%Some mutational signatures reproduce across cohorts, whereas others do not and may be due to the different sequencing platforms used.
+Because this is higher than the false discovery rate, we conclude that the cohort-wide GCAT test identifies predominantly spurious variants, but also variants that have biased genotypes in populations other than the CHB/CHD. 
 
 Finally, among the 15,270 $Q$-associated variants, 613 are present on Illumina's Omni 2.5 chip (See Figure \ref{Omni}). 
 These are likely among the small number of variants that are present in the data but exhibit biased genotyping in 1kGP. 
