--- a/LatexManuscript/legacy.tex
+++ b/LatexManuscript/legacy.tex
@@ -450,9 +450,10 @@ In these plots we are comparing the deviance from the null model in the 15,270 v
 \begin{figure}
 \includegraphics[width=\hsize,keepaspectratio]{../Figures/SNPOverlap6.jpg}
 
-\caption{Comparing results from the single population tests, we find 812 variants independently associated with average quality of mapped bases $Q$ in more than one population.
+\caption{Comparing results from the single population tests, we find 812 variants that pass the strict mask that are independently associated with average quality of mapped bases $Q$ in more than one population.
 \textbf{A} For each population, we plot the number of variants associated to at least one other population.
-\textbf{B} The number of populations for which a variant has reached significance.}
+Phase 1 populations are indicated with a star (*).
+\textbf{B} The number of populations for which a variant has reached significance. Many of the variants associated in only one population do not pass the strict mask. }
   \label{OverLap}
 \end{figure}
 
