--- a/LatexManuscript/legacy.tex
+++ b/LatexManuscript/legacy.tex
@@ -450,10 +450,10 @@ In these plots we are comparing the deviance from the null model in the 15,270 v
 \begin{figure}
 \includegraphics[width=\hsize,keepaspectratio]{../Figures/SNPOverlap6.jpg}
 
-\caption{Comparing results from the single population tests, we find 812 variants that pass the strict mask that are independently associated with average quality of mapped bases $Q$ in more than one population.
-\textbf{A} For each population, we plot the number of variants associated to at least one other population.
-Phase 1 populations are indicated with a star (*).
-\textbf{B} The number of populations for which a variant has reached significance. Many of the variants associated in only one population do not pass the strict mask. }
+\caption{Results from the single population test. We find a total of 1,451 variants associated with the average quality of mapped bases $Q$ where 812 of them are found in at least one other population. Variants that pass the strict mask are in light grey while those that do not are in dark grey.
+%Comparing results from the single population tests, we find 812 variants independently associated with average quality of mapped bases $Q$ in more than one population.
+\textbf{A} For each population, we plot the number of variants associated to $Q$.
+\textbf{B} The number of populations for which a variant has reached significance.}
   \label{OverLap}
 \end{figure}
 
